Todo Mini Project Using React

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-ijkl.txt
+# ijkl.txt
+node_modules
+Module1
+Module2
+Bootstrap_Intro
+Hooks Intro
+movie_app
+React_Intro
+package-lock.json
+package.json
